fix BR_12: array borders not visible in dark mode

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ $yellowLine: #FFDE3C;
 
 	--top-header-bg: #01233F;
 	--top-header-btn: #d7d7d7;
-	--top-header-btn-hg:  #027AFF;
+	--top-header-btn-hg: #027AFF;
 	--top-setting-bg: #FFFFFF;
 	--top-setting-label: #606060;
 	--top-setting-btn: #5b5b5b;
@@ -81,7 +81,7 @@ $yellowLine: #FFDE3C;
 	--mid-control-param-matrix-cell-bg: #FFFFFF;
 	--mid-control-param-matrix-cell-font: #6f6f6f;
 
-	--mid-control-log-bg:#F7F7F7;
+	--mid-control-log-bg: #F7F7F7;
 	--mid-control-log-success: #53DD6C;
 	--mid-control-log-failure: #DC0707;
 
@@ -102,8 +102,8 @@ $yellowLine: #FFDE3C;
 
 	--right-code-bg: #F9F9F9;
 	--right-code-line-hg: rgba(0, 187, 255, 0.2);
-	--right-code-line-hover: rgba(0,0,0,0.03);
-	--right-code-line-active: rgba(0,0,0,0.05);
+	--right-code-line-hover: rgba(0, 0, 0, 0.03);
+	--right-code-line-active: rgba(0, 0, 0, 0.05);
 	--right-code-line-num: #9DA9AD;
 	--right-code-line-explain-btn-active: #575757;
 	--right-code-line-explain-btn-inactive: #c9c9c9;
@@ -120,8 +120,8 @@ $yellowLine: #FFDE3C;
 	--right-code-bottom-btn-bg-active: rgb(238, 238, 238);
 
 	// Graph
-	--graph-node-circle-fill:  #ffffff;
-	--graph-node-circle-stroke:  #4f4f4f;
+	--graph-node-circle-fill: #ffffff;
+	--graph-node-circle-stroke: #4f4f4f;
 	--graph-node-id-fill: #6a6a6a;
 	--graph-node-weight-fill: #6a6a6a;
 	--graph-node-circle-fill-selected: #2289ff;
@@ -132,8 +132,8 @@ $yellowLine: #FFDE3C;
 	--graph-node-circle-stroke-visited: #ee0970;
 	--graph-node-id-fill-visited: #FFFFFF;
 
-	--graph-text-fill:#1809ee;
-	--graph-text-stroke:#1809ee;
+	--graph-text-fill: #1809ee;
+	--graph-text-stroke: #1809ee;
 
 	--graph-edge-line-stroke: #aeaeae;
 	--graph-edge-line-weight-fill: #a4a4a4;
@@ -227,7 +227,7 @@ $yellowLine: #FFDE3C;
 	--left-search-border-focus: #505050;
 	--left-item-border-hover: #505050;
 
-	--left-bg:#16171B;
+	--left-bg: #16171B;
 	--left-item-bg: #16171B;
 	--left-cat-bg: #16171B;
 
@@ -235,7 +235,7 @@ $yellowLine: #FFDE3C;
 	--left-cat-font: #a9a9a9;
 	--left-item-font: #bababa;
 
-	--mid-header-bg:#16171B;
+	--mid-header-bg: #16171B;
 	--mid-header-font: #a9a9a9;
 	--mid-anim-bg: #202125;
 
@@ -270,7 +270,7 @@ $yellowLine: #FFDE3C;
 
 
 
-	--mid-control-log-bg:#111215;
+	--mid-control-log-bg: #111215;
 	--mid-control-font: #bfbfbf;
 
 	--right-text-bg: #16171B;
@@ -306,8 +306,8 @@ $yellowLine: #FFDE3C;
 	--right-code-bottom-btn-bg-active: #282a2e;
 
 	// Graph
-	--graph-node-circle-fill:  #5c5c5c;
-	--graph-node-circle-stroke:  #373737;
+	--graph-node-circle-fill: #5c5c5c;
+	--graph-node-circle-stroke: #373737;
 	--graph-node-id-fill: #d5d5d5;
 	--graph-node-weight-fill: #6a6a6a;
 	--graph-node-circle-fill-selected: #2289ff;
@@ -329,7 +329,7 @@ $yellowLine: #FFDE3C;
 	--graph-arrow-fill-visited: #ee0970;
 
 	--array-2d-row-col-bg: #343434;
-	--array-2d-row-col-border: #212121;
+	--array-2d-row-col-border: #9c9c9c;
 	--array-2d-row-col-value-color: #d5d5d5;
 	--array-2d-row-col-bg-selected: #2289ff;
 	--array-2d-row-col-bg-selected1: #11cc77;
@@ -538,10 +538,10 @@ $yellowLine: #FFDE3C;
 }
 
 @mixin calc($property, $expression...) {
-  #{$property}: -moz-calc(#{$expression});
-  #{$property}: -o-calc(#{$expression});
-  #{$property}: -webkit-calc(#{$expression});
-  #{$property}: calc(#{$expression});
+	#{$property}: -moz-calc(#{$expression});
+	#{$property}: -o-calc(#{$expression});
+	#{$property}: -webkit-calc(#{$expression});
+	#{$property}: calc(#{$expression});
 }
 
 
@@ -565,6 +565,6 @@ $yellowLine: #FFDE3C;
 
 @mixin preventWrap {
 	white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
